--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Portfólio</title>
+        <style>
+
+            
+        </style>
     </head>
     <body>
         <h1>Marcos Vinícius Pinheiro Leite</h1>
-        <img src="/imagens/Marcos.jpg" alt="Foto de Marcos" width="400px">
+        <img src="/imagens/Marcos.jpg" alt="Foto de Marcos" width="400px">                                                                                                                      
     </body>
 
 
