--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     </head>
     <body>
         <h1>Marcos Vinícius Pinheiro Leite</h1>
-        <img src="/imagens/Marcos.jpg" alt="Foto de Marcos" width="400px">                                                                                                                      
+        <img src="/imagens/Marcos.jpg" alt="Foto de Marcos" width="400px"> 
+        
+        <p>Meu nome é <strong>Marcos Vinícius Pinheiro Leite</strong>, tenho 38 anos.<br> Atualmente moro em Itabira nas Minas Gerais.</p>
+                                                                                                                 
     </body>
 
 
